# mobcord

./: APKBUILD  Cargo.toml  Makefile  README.md  install.sh  shell.nix  start.sh  uninstall.sh
.github/workflows/: build.yml
src/: main.rs  script.js
